Хотфикс (Урон у ксено)

--- a/Resources/Prototypes/Voidkol/Lyutsik/Entities/Mobs/NPCs/alien.yml
+++ b/Resources/Prototypes/Voidkol/Lyutsik/Entities/Mobs/NPCs/alien.yml
@@ -71,6 +71,7 @@
       types:
         Brute: 25
         Slash: 30
+        Structural: 50
   - type: DamageStateVisuals
     rotate: true
     states:
