--- a/Resources/Prototypes/Voidkol/Lyutsik/Entities/Mobs/NPCs/alien_baby.yml
+++ b/Resources/Prototypes/Voidkol/Lyutsik/Entities/Mobs/NPCs/alien_baby.yml
@@ -69,6 +69,7 @@
       types:
         Brute: 10
         Slash: 5
+        Structural: 5
   - type: DamageStateVisuals
     rotate: true
     states:
